cursive-bootstrap/tests/ui/E-SEM/E-SEM-2855.cursive
// RUN: compile-fail
// DIAG: E-SEM-2855
// SPEC: 6.9
// DESC: @error predicate on void-returning procedure

extern "C" {
    @foreign_ensures(@error) //~ ERROR E-SEM-2855
    procedure void_fn() -> ()
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
